Change name of db to friend-space

--- a/config/sample/database.yml
+++ b/config/sample/database.yml
@@ -2,7 +2,7 @@ development:
   adapter: postgresql
   encoding: unicode
   host: localhost
-  database: rails-4-development
+  database: friend-space-development
   username: username
   password:
 
@@ -28,6 +28,6 @@ test:
   adapter: postgresql
   encoding: unicode
   host: localhost
-  database: rails-4-test<%= ENV['TEST_ENV_NUMBER'] %>
+  database: friend-space-test<%= ENV['TEST_ENV_NUMBER'] %>
   username: username
   password:
